# esp-butt

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  docs_build.py  mise.toml  package-lock.json  package.json  pyproject.toml  run_kitty.sh  run_kitty_pts.sh  rustfmt.toml  sdkconfig.defaults  size.csv  size2.csv  size_report.py  size_tui.py  strings.txt
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: docs.yml  firmware.yml
cad/: AZ-Delivery - OLED13 IIC - moved 0.75.step  assembly.ipynb  cad.ipynb  cad_utils.py  case.ipynb  encoder_knob.ipynb  knurled_cylinder.py  pcb.py  power_switch_cap.ipynb  slider_knob.ipynb
cad/cad_utils/: __init__.py  doc.py  export.py  kicad.py  knurled_cylinder.py  utils.py
crates/esp-butt/: Cargo.toml  build.rs
crates/esp-butt/src/: main.rs
crates/esp-butt/src/app/: app.rs  device_control.rs  device_list.rs  event.rs  fonts.rs  mod.rs
crates/esp-butt/src/ble/: discover.rs  gatt.rs  init.rs
crates/esp-butt/src/buttplug/: async_manager.rs  data.rs  mod.rs
crates/esp-butt/src/buttplug/hwmgr/: hardware.rs
crates/esp-butt/src/hw/esp/: display.rs  mod.rs  slider.rs  ticker.rs
crates/esp-butt/src/hw/mock/: display.rs  encoder.rs  mod.rs  slider.rs  ticker.rs
crates/esp-butt/src/img/: mod.rs
crates/esp-butt/src/utils/: heap.rs  log.rs
docs/: assets.py  index.md
docs/.vitepress/: config.ts  tsconfig.json  uno.config.ts  vue-shim.d.ts
docs/.vitepress/plugins/: glb.ts
docs/.vitepress/theme/: Layout.vue  custom.css  index.ts
docs/.vitepress/theme/components/: BomTable.vue  CadScene.vue  CadViewer.vue  CustomVPFeature.vue  HeroImage.vue  HeroScene.vue  HeroViewer.vue  PCBViewer.vue  ResistorBands.vue  SchematicViewer.vue  StepDownload.vue
docs/.vitepress/theme/composables/: models.ts  useGifFrames.ts  useRecording.ts
docs/firmware/: index.md
docs/hardware/: bom.md  index.md  models.md  pcb.md  schematic.md
docs/recording/: README.md  session.ndjson
pcb/: export_svg.sh
pcb/esp-butt/: esp-butt.kicad_dru  esp-butt.kicad_pcb  esp-butt.kicad_pro  esp-butt.kicad_sch  esp-butt.kicad_sym  fp-lib-table  sheet.kicad_wks  sym-lib-table  ~esp-butt.kicad_pro.lck
pcb/esp-butt/3D/: ATTRIBUTION.md  AZ-Delivery - OLED13 IIC - split.step  AZ-Delivery - OLED13 IIC -0.6.step  PBH2UEESNPNAGX.step  PEC12R-4225F-S0024.step  PTA4543-2015DPB103-fixed.step  PTA4543-2015DPB103-fixed2.step  XIAO-ESP32S3 v2Seeed Studio XIAO-ESP32-S3.step
pcb/esp-butt/esp-butt.pretty/: OLED_128x64_1.3in_I2C_Socket_Vertical.kicad_mod  SW_PB400EEQR1BLK.kicad_mod  SW_PBH2UEESNPNAGX.kicad_mod  TRIM_PTA4543-2015DPB103.kicad_mod  XDCR_PEC12R-4225F-S0024.kicad_mod  XIAO-ESP32-S3-DIP+.kicad_mod  XIAO-ESP32-S3-SMD.kicad_mod
pcb/kicad-config/10.0/colors/: witchhazel.json
sprite/: base.ase  haxrcorp4089.bdf  hex.bdf  hex2.bdf
src/: img.rs  main.rs  manual_test.rs
src/app/: app.rs  app_device_control.rs  app_device_list.rs  app_error.rs  app_idle.rs  device.rs  device_control.rs  device_list.rs  event.rs  fonts.rs  idle.rs  mod.rs  state.rs
src/ble/: address.rs  advertisement.rs  client.rs  discover.rs  gap.rs  gatt.rs  init.rs  mod.rs  peer.rs  peripheral.rs  utils.rs
src/buttplug/: async_manager.rs  backdoor.rs  connector.rs  data.rs  deferred.rs  mod.rs
src/buttplug/hwmgr/: comm_manager.rs  hardware.rs  mod.rs
src/hw/: display.rs  encoder.rs  mod.rs  slider.rs
src/hw/esp/: adc.rs  display.rs  encoder.rs  mod.rs  slider.rs  ticker.rs
src/hw/mock/: display.rs  mod.rs
src/hw_mock/: mod.rs
src/img/: mod.rs
src/utils/: draw.rs  heap.rs  log.rs  mod.rs  os_mbuf.rs  ptr.rs  report.rs  spawn.rs  stream.rs
src/utils/task/: mod.rs  task.rs  task_info.rs  task_mock.rs
trace/: domi-2-failing-battery4.pcapng  domi-2-semi-working-battery.pcapng  domi-2-working-battery2.pcapng
