[workspace]
resolver = "3"
members = [
  "crates/esp-butt",
]

[profile.release]
opt-level = "z"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = "z"
debug = 1
panic = "abort"
codegen-units = 1
debug-assertions = false

[patch.crates-io]
buttplug_core = { path = "../buttplug/embedded/crates/buttplug_core" }
buttplug_client = { path = "../buttplug/embedded/crates/buttplug_client" }
buttplug_server = { path = "../buttplug/embedded/crates/buttplug_server" }
buttplug_server_device_config = { path = "../buttplug/embedded/crates/buttplug_server_device_config" }
buttplug_client_in_process = { path = "../buttplug/embedded/crates/buttplug_client_in_process" }
buttplug_server_hwmgr_btleplug = { path = "../buttplug/embedded/crates/buttplug_server_hwmgr_btleplug" }
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys", rev = "64667a38fb8004e1fc3b032488af6857ca3cd849" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal", rev = "c42c95968fb0d2d0b3ca5c0e743d22fc87018f1c" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc", rev = "dee202f146c7681e54eabbf118a216fc0195d203" }
