cargo-features = ["trim-paths"]

[package]
name = "esp-butt"
version = "0.1.0"
authors = ["Jasmin Bom <jsmnbom@gmail.com>"]
edition = "2024"
rust-version = "1.87"

default-run = "esp-butt"

[[bin]]
name = "esp-butt"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "z"
lto = false
debug = 1
codegen-units = 1
panic = "abort"
debug-assertions = false
trim-paths = "object"

[profile.dev]
opt-level = "s"
debug = 1
panic = "abort"
codegen-units = 16
debug-assertions = false

[features]
default = []

[dependencies]
log = "0.4"
anyhow = { version = "=1.0.101", default-features = false }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
futures-concurrency = "7.7.1"
async-trait = "0.1"
uuid = "1"
btuuid = { version = "0.1.1", features = ["uuid"] }
async-stream = "0.3.6"
tracing = { version = "0.1.37", default-features = false }
tracing-log = { version = "0.2.0" }
serde = { version = "1.0"}
buttplug_core = { version = "10.0.0", default-features = false}
buttplug_client = { version = "10.0.0", default-features = false }
buttplug_server = { version = "10.0.0", default-features = false }
buttplug_server_device_config = { version = "10.0.0", default-features = false }
buttplug_client_in_process = { version = "10.0.0", default-features = false }
postcard = { version = "1.1.3", default-features = false, features = ["use-std"] }
strum = { version = "0.27", features = ["derive"] }
smallvec = "1.15"
bitflags = "2.11"
rustc-hash = { version = "2.1", default-features = false }
miniz_oxide = {version="0.8.9"}
pastey = "0.2.1"
u8g2-fonts = "0.7.2"
embedded-graphics = "0.8.2"
mini-oled = { version = "0.1.3", features = ["embedded-graphics-core"] }
embedded-hal = { version = "1.0.0" }
embedded-graphics-core = "0.4.1"
litemap = "0.8.1"
dashmap = { version = "6.1.0", features = ["serde"] }
enumflags2 = "0.7.12"

[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-svc = "0.52.1"
tokio = { version = "1.49.0", features = ["sync"] }

[target.'cfg(not(target_os = "espidf"))'.dependencies]
tokio = { version = "1.49.0", features = ["sync", "time", "rt", "rt-multi-thread"] }
ratatui = "0.30.0"
ratatui-image = { version = "10.0.6", default-features = false, features = ["crossterm"] }
image = { version = "0.25.9", default-features = false, features = ["png"] }
tracing-subscriber = "0.3.22"
tracy-client = { version = "0.18.4", features = ["demangle", "flush-on-exit"] }
tracing-tracy = "0.11.4"
buttplug_server_hwmgr_btleplug = { version = "10.0.0", default-features = false }
regex-lite = "0.1.9"

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }
anyhow = "=1.0.101"
buttplug_core = { version = "10.0.0", default-features = false}
buttplug_server_device_config = { version = "10.0.0" }
postcard = { version = "1.1.3", default-features = false, features = ["use-std"] }
miniz_oxide = "0.8.9"
image = { version = "0.24.7", default-features = false, features = ["png"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[package.metadata.esp-idf-sys]
esp_idf_components = [
  "esp_driver_gpio",
  "esp_timer",
  "esp_phy",
  "esp_psram",
  "bt",
  "esp_driver_i2c",
  "esp_adc",
  "main",
  "esp_partition", # needed for esp-idf-svc to build
  "fatfs", # needed for esp-idf-svc to build
  "spiffs" # needed for esp-idf-svc to build
]

[patch.crates-io]
buttplug_core = { path = "../buttplug/embedded2/crates/buttplug_core" }
buttplug_client = { path = "../buttplug/embedded2/crates/buttplug_client" }
buttplug_server = { path = "../buttplug/embedded2/crates/buttplug_server" }
buttplug_server_device_config = { path = "../buttplug/embedded2/crates/buttplug_server_device_config" }
buttplug_client_in_process = { path = "../buttplug/embedded2/crates/buttplug_client_in_process" }
buttplug_server_hwmgr_btleplug = { path = "../buttplug/embedded2/crates/buttplug_server_hwmgr_btleplug" }
# esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys", rev = "64667a38fb8004e1fc3b032488af6857ca3cd849" }
# esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal", rev = "c42c95968fb0d2d0b3ca5c0e743d22fc87018f1c" }
# esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc", rev = "dee202f146c7681e54eabbf118a216fc0195d203" }
